@@ -5,6 +5,7 @@ pgl 2.1.3~WIP
   [jre]
   * added "+" to default nice values (+0 for pgld). Fixes problems with Redhat's
     init functions.
+  * fixed Makefile to keep default setting "use builtin LSB init functions".
   * impoved output of show_config to show the version of the LSB init functions.
 
 -- jre <jre-phoenix@users.sourceforge.net>  Mon, 29 Aug 2011 18:07:33 +0200
